[package]
name = "clickhouse-wasm-udf"
version = "0.1.0"
edition = "2024"
description = "SDK for writing ClickHouse WASM UDFs in Rust"
license = "Apache-2.0"
repository = "https://github.com/vdimir/chwasmudf"
readme = "README.md"

[workspace]
members = ["macros", "examples"]

[dependencies]
clickhouse-wasm-udf-macros = { path = "macros", version = "0.1.0" }
rmp-serde = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
