[package]
name = "clickhouse_wasm_example"
version = "0.1.0"
edition = "2021"

[dependencies]
clickhouse_wasm_sdk = { path = "../clickhouse_wasm_sdk" }
clickhouse_wasm_udf_bindgen = { path = "../clickhouse_wasm_udf_bindgen" }
serde = { version = "1.0.209", features = ["derive"] }
rmp-serde = "1.3.0"
serde_json = "1.0.127"
rmpv = "1.3.0"
base64 = "0.22.1"
x509-parser = "0.16.0"

[lib]
crate-type = ["cdylib"]
